# colored-text

./: Cargo.toml  README.org  git-push.sh
src/: esthetics.rs  lib.rs
tests/: esthetics_test.rs  lib_test.rs
