[package]
name = "colored-text"
version = "0.1.1"
edition = "2021"
authors = ["Andri Reveli <reveliandri@gmail.com>"]
description = "A simple 0-dependecies rust library for printing colored text on a UNIX terminal"
readme = "README.org"
repository = "https://gitlab.com/andriR/colored-text"
license-file = "LICENSE"
